tinc-build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__all__tests__all_const_needs_runtime.snap
---
source: tinc-build/src/codegen/cel/functions/all.rs
expression: result
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in [ELAPSED]s
--- expanded
#![feature(prelude_import)]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
#[allow(dead_code)]
fn all() -> Result<bool, ::tinc::__private::cel::CelError<'static>> {
    Ok({
        let mut iter = ([
            ::tinc::__private::cel::to_bool(
                ::tinc::__private::cel::CelValue::Bool(false),
            ),
        ])
            .into_iter();
        loop {
            let Some(item) = iter.next() else {
                break true;
            };
            if !(item) {
                break false;
            }
        }
    })
}
